MDEV-9629 Disappearing PRI from Key column after creating a trigger

when creating shadow nullable fields, preserve all
original field flags (because we swap flags
back and forth in not_null_fields_have_null_values())